--- a/.github/workflows/playwright_order_test.yml
+++ b/.github/workflows/playwright_order_test.yml
@@ -35,7 +35,7 @@ jobs:
       JSON_SCHEMA: ${{ secrets.JSON_SCHEMA }}
       JSON_SCHEMA_TEST: ${{ secrets.JSON_SCHEMA_TEST}}
       METHOD: ${{ secrets.METHOD}}
-      JSON_SCHEMA_BASE64: ${{ JSON_SCHEMA_BASE64 }}
+      JSON_SCHEMA_BASE64: ${{ secrets.JSON_SCHEMA_BASE64 }}
       
 
     steps:
