--- a/.github/workflows/playwright_order_test.yml
+++ b/.github/workflows/playwright_order_test.yml
@@ -41,6 +41,7 @@ jobs:
     steps:
       - run: echo "JSON_SCHEMA_BASE64=${JSON_SCHEMA_BASE64}"
       - run: echo "JSON_SCHEMA=${JSON_SCHEMA}"
+      - run: echo "$JSON_SCHEMA_BASE64" | base64 --decode
 
       # Клонирование репозитория
       - uses: actions/checkout@v4
