--- a/.github/workflows/playwright_order_test.yml
+++ b/.github/workflows/playwright_order_test.yml
@@ -5,11 +5,12 @@ on:
   workflow_dispatch:
   # pull_request:
   #   branches: [ main, master ]
-  # schedule:
+  schedule:
     # - cron: '0 */12 * * *'
     # - cron: '0 */24 * * *'
     # - cron: '0 5 * * *'    
     # - cron: '0 14 * * *'  
+    - cron: '*/30 * * * *'
 
 # Определение Задачи(job)
 jobs:
@@ -112,7 +113,8 @@ jobs:
       METHOD: ${{ secrets.METHOD}}
       JSON_SCHEMA_BASE64: ${{ secrets.JSON_SCHEMA_BASE64 }}
       
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
+    # if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && (github.event.schedule == '*/30 * * * *'))
 
     # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
     concurrency: playwright-tests
