--- a/.github/workflows/playwright_order_test.yml
+++ b/.github/workflows/playwright_order_test.yml
@@ -5,12 +5,12 @@ on:
   workflow_dispatch:
   # pull_request:
   #   branches: [ main, master ]
-  schedule:
+  # schedule:
     # - cron: '0 */12 * * *'
     # - cron: '0 */24 * * *'
     # - cron: '0 5 * * *'    
     # - cron: '0 14 * * *'  
-    - cron: '*/30 * * * *'
+    # - cron: '*/30 * * * *'
 
 # Определение Задачи(job)
 jobs:
@@ -40,9 +40,6 @@ jobs:
       
 
     steps:
-      - run: echo "JSON_SCHEMA_BASE64=${JSON_SCHEMA_BASE64}"
-      - run: echo "JSON_SCHEMA=${JSON_SCHEMA}"
-      - run: echo "$JSON_SCHEMA_BASE64" | base64 --decode
 
       # Клонирование репозитория
       - uses: actions/checkout@v4
@@ -52,18 +49,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12.1'
-
-              # Добавьте этот шаг для отладки
-      - name: Debug environment variables
-        run: |
-          echo "Checking for JSON_SCHEMA_BASE64..."
-          if [ -n "$JSON_SCHEMA_BASE64" ]; then
-            echo "JSON_SCHEMA_BASE64 is set"
-          else
-            echo "JSON_SCHEMA_BASE64 is NOT set"
-          fi
-        env:
-          JSON_SCHEMA_BASE64: ${{ secrets.JSON_SCHEMA_BASE64 }}
 
       # Установка зависимостей
       - name: Install dependencies
@@ -98,10 +83,7 @@ jobs:
         with:
           name: allure-results-main-${{ github.run_id }}
           path: allure-results/
-
-      - name: Debug environment variable
-        run: echo "JSON_SCHEMA=${{ secrets.JSON_SCHEMA }}"
-
+          
   # Тест на создание заказа
   order-test:
     # needs: test  # order-test ждет окончания test если он запущен
@@ -114,7 +96,7 @@ jobs:
       JSON_SCHEMA_BASE64: ${{ secrets.JSON_SCHEMA_BASE64 }}
       
     # if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && (github.event.schedule == '*/30 * * * *'))
+    # if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && (github.event.schedule == '*/30 * * * *'))
 
     # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
     concurrency: playwright-tests
