--- a/.github/workflows/playwright_order_test.yml
+++ b/.github/workflows/playwright_order_test.yml
@@ -8,7 +8,8 @@ on:
   # schedule:
     # - cron: '0 */12 * * *'
     # - cron: '0 */24 * * *'
-    # - cron: '0 5 * * *'    
+    # - cron: '0 5 * * *'
+    # - cron: '0 5 * * *'
     # - cron: '0 14 * * *'  
     # - cron: '*/30 * * * *'
 
@@ -99,7 +100,7 @@ jobs:
     # if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && (github.event.schedule == '*/30 * * * *'))
 
     # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
-    concurrency: playwright-tests
+    # concurrency: playwright-tests
 
     steps:
 
