--- a/.github/workflows/playwright_order_old.yml
+++ b/.github/workflows/playwright_order_old.yml
@@ -5,11 +5,11 @@ on:
   workflow_dispatch:
   # pull_request:
   #   branches: [ main, master ]
-  schedule:
+  # schedule:
     # - cron: '0 */12 * * *'
     # - cron: '0 */24 * * *'
-    - cron: '0 5 * * *'    
-    - cron: '0 14 * * *'
+    # - cron: '0 5 * * *'    
+    # - cron: '0 14 * * *'
     # - cron: '*/30 * * * *'
 
 # Определение Задачи(job)
