--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -66,7 +66,7 @@ jobs:
 
       # Запуск тестов
       - name: Run tests
-        run: pytest --reruns 2 --reruns-delay 3 -m "not custom_schedule" --alluredir=allure-results
+        run: pytest --reruns 2 --reruns-delay 3 -m "for_test" --alluredir=allure-results
 
      # Сохранение auth_state.json в кеш
       - name: Cache auth state
