--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -64,14 +64,22 @@ jobs:
         run: |
           sed -i 's/{TMS_TOKEN}/${{ secrets.TMS_TOKEN }}/g' connection_config.ini
 
+      # Восстанавливаем кеш auth_state.json
+      - name: Restore cached auth state
+        uses: actions/cache@v3
+        with:
+          path: auth_states/auth_state.json
+          key: auth-state-${{ github.run_id }}
+          restore-keys: auth-state-
+
       # Запуск тестов
       - name: Run tests
         run: |
           echo "Running tests with verbosity and fail log"
-          timeout 50m pytest tests/test_cart.py tests/test_checkout.py \
+          timeout 50m pytest tests/test_checkout.py \
             --reruns 2 --reruns-delay 3 \
             --alluredir=allure-results \
-            -v --tb=short
+            -v --tb=short --capture=tee-sys
 
      # Сохранение auth_state.json в кеш
       - name: Cache auth state
