--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Run tests
         run: |
           echo "Running tests with verbosity and fail log"
-          timeout 50m pytest tests/test_checkout.py --reruns 2 --reruns-delay 3 \
+          timeout 50m pytest --reruns 2 --reruns-delay 3 -m "not custom_schedule"\
             --alluredir=allure-results \
             -v --tb=short --capture=tee-sys --log-cli-level=DEBUG | tee pytest-output.log
             
@@ -125,7 +125,7 @@ jobs:
       JSON_SCHEMA_BASE64: ${{ secrets.JSON_SCHEMA_BASE64 }}
 
     # if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && (github.event.schedule == '*/30 * * * *'))
-    if: github.event_name == (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
 
     # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
     concurrency: playwright-tests_new
