--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -75,34 +75,14 @@ jobs:
       # Запуск тестов
       - name: Run tests
         run: |
-          echo "Running tests with verbosity and fail log"
-          timeout 50m pytest --reruns 2 --reruns-delay 3  -m "test_ci"\
-            --alluredir=allure-results \
-            -v --tb=short --capture=tee-sys --log-cli-level=DEBUG | tee pytest-output.log
-            
-      - name: Upload full pytest log
-        uses: actions/upload-artifact@v4
-        with:
-          name: pytest-output
-          path: pytest-output.log
-        
-
+          timeout 50m pytest --reruns 2 --reruns-delay 3  -m "test_ci" --alluredir=allure-results
+             
      # Сохранение auth_state.json в кеш
       - name: Cache auth state
         uses: actions/cache@v3
         with:
           path: auth_states/auth_state.json
           key: auth-state-${{ github.run_id }}
-
-      - name: Kill remaining processes
-        if: always()
-        run: |
-          echo "Killing lingering processes"
-          pkill -f playwright || true
-          pkill -f chromium || true
-          pkill -f firefox || true
-          pkill -f node || true
-          pkill -f pytest || true
 
       # Загрузка артефактов
       - name: Upload Allure Results
@@ -125,7 +105,7 @@ jobs:
       JSON_SCHEMA_BASE64: ${{ secrets.JSON_SCHEMA_BASE64 }}
 
     # if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && (github.event.schedule == '*/30 * * * *'))
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
+    if: github.event_name == (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
 
     # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
     concurrency: playwright-tests_new
