--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -75,7 +75,7 @@ jobs:
       # Запуск тестов
       - name: Run tests
         run: |
-          timeout 50m pytest tests/test_checkout.py::test_customer_switching_price --reruns 2 --reruns-delay 3 --alluredir=allure-results
+          timeout 50m pytest --reruns 2 --reruns-delay 3 -m "not custom_schedule" --alluredir=allure-results
              
      # Сохранение auth_state.json в кеш
       - name: Cache auth state
@@ -105,7 +105,7 @@ jobs:
       JSON_SCHEMA_BASE64: ${{ secrets.JSON_SCHEMA_BASE64 }}
 
     # if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && (github.event.schedule == '*/30 * * * *'))
-    if: github.event_name == (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '0 5 * * *')
 
     # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
     concurrency: playwright-tests_new
