--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -75,7 +75,7 @@ jobs:
       # Запуск тестов
       - name: Run tests
         run: |
-          timeout 50m pytest --reruns 2 --reruns-delay 3 -m "not custom_schedule" --alluredir=allure-results
+          pytest --reruns 2 --reruns-delay 3 -m "not custom_schedule" --alluredir=allure-results
              
      # Сохранение auth_state.json в кеш
       - name: Cache auth state
