--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -257,9 +257,11 @@ jobs:
       
   notify-on-failure:
     if: |
-     (failure()) ||
-     (needs.test.result == 'error') ||
-     (contains(needs.*.result, 'error'))
+      failure() ||
+      (needs.test.result == 'error') ||
+      (needs.order-test.result == 'error') ||
+      (needs.test.result == 'failure') ||
+      (needs.order-test.result == 'failure')
     runs-on: ubuntu-latest
     needs: test
     steps:
