--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # Основная часть тестов
   test:
-    timeout-minutes: 70
+    timeout-minutes: 5
 
     # Уникальный ключ для группы задач предназначен для того, чтобы повторный запуск Джобы вставал в ожидание, не конфликтуая с первым
     concurrency: playwright-tests_new
@@ -258,12 +258,16 @@ jobs:
   notify-on-failure:
     if: |
       failure() ||
-      (needs.test.result == 'error') ||
-      (needs.order-test.result == 'error') ||
-      (needs.test.result == 'failure') ||
-      (needs.order-test.result == 'failure')
+      (needs.test && needs.test.result != 'success') ||
+      (needs.order-test && needs.order-test.result != 'success')
+      # failure() ||
+      # (needs.test.result == 'error') ||
+      # (needs.order-test.result == 'error') ||
+      # (needs.test.result == 'failure') ||
+      # (needs.order-test.result == 'failure')
     runs-on: ubuntu-latest
-    needs: test
+    # needs: test
+    needs: [test, order-test]
     steps:
       - name: Send failure email
         uses: dawidd6/action-send-mail@v3
