--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -260,8 +260,8 @@ jobs:
   notify-on-failure:
     if: |
       failure() ||
-      (needs.test && needs.test.result != 'success') ||
-      (needs.order-test && needs.order-test.result != 'success')
+      (needs.test && needs.test.result != 'success' || 'skipped') ||
+      (needs.order-test && needs.order-test.result != 'success' || 'skipped')
     runs-on: ubuntu-latest
     # needs: test
     needs: [test, order-test]
