--- a/.github/workflows/playwright_order.yml
+++ b/.github/workflows/playwright_order.yml
@@ -282,5 +282,5 @@ jobs:
 
             📦 Commit: ${{ github.sha }}
             👤 Triggered by: ${{ github.actor }}
-          to: urin.a@garagetools.ru,timofeev.a@garagetools.ru
+          to: urin.a@garagetools.ru
           from: GitHub Actions <${{ secrets.GMAIL_USERNAME }}>
